doc/v2.0/_sources/reference/generated/ak.forms.NumpyForm.rst.txt
ak.forms.NumpyForm
------------------

.. py:module: ak.forms.NumpyForm

Defined in `awkward.forms.numpyform <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/numpyform.py>`__ on `line 40 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/numpyform.py#L40>`__.

.. py:class:: ak.forms.NumpyForm(self, primitive, inner_shape=(), *, parameters=None, form_key=None)



.. _ak-forms-numpyform-is_numpy:

.. py:attribute:: ak.forms.NumpyForm.is_numpy
    :value: True



.. _ak-forms-numpyform-primitive:

.. py:attribute:: ak.forms.NumpyForm.primitive



.. _ak-forms-numpyform-inner_shape:

.. py:attribute:: ak.forms.NumpyForm.inner_shape



.. _ak-forms-numpyform-copy:

.. py:method:: ak.forms.NumpyForm.copy(self, primitive=unset, inner_shape=unset, *, parameters=unset, form_key=unset)



.. _ak-forms-numpyform-simplified:

.. py:method:: ak.forms.NumpyForm.simplified(cls, primitive, inner_shape=(), *, parameters=None, form_key=None)



.. _ak-forms-numpyform-itemsize:

.. py:attribute:: ak.forms.NumpyForm.itemsize



.. _ak-forms-numpyform-__repr__:

.. py:method:: ak.forms.NumpyForm.__repr__(self)



.. _ak-forms-numpyform-_to_dict_part:

.. py:method:: ak.forms.NumpyForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-numpyform-_type:

.. py:method:: ak.forms.NumpyForm._type(self, typestrs)



.. _ak-forms-numpyform-__eq__:

.. py:method:: ak.forms.NumpyForm.__eq__(self, other)



.. _ak-forms-numpyform-to_regularform:

.. py:method:: ak.forms.NumpyForm.to_RegularForm(self)



.. _ak-forms-numpyform-purelist_parameter:

.. py:method:: ak.forms.NumpyForm.purelist_parameter(self, key)



.. _ak-forms-numpyform-purelist_isregular:

.. py:attribute:: ak.forms.NumpyForm.purelist_isregular



.. _ak-forms-numpyform-purelist_depth:

.. py:attribute:: ak.forms.NumpyForm.purelist_depth



.. _ak-forms-numpyform-is_identity_like:

.. py:attribute:: ak.forms.NumpyForm.is_identity_like



.. _ak-forms-numpyform-minmax_depth:

.. py:attribute:: ak.forms.NumpyForm.minmax_depth



.. _ak-forms-numpyform-branch_depth:

.. py:attribute:: ak.forms.NumpyForm.branch_depth



.. _ak-forms-numpyform-fields:

.. py:attribute:: ak.forms.NumpyForm.fields



.. _ak-forms-numpyform-is_tuple:

.. py:attribute:: ak.forms.NumpyForm.is_tuple



.. _ak-forms-numpyform-dimension_optiontype:

.. py:attribute:: ak.forms.NumpyForm.dimension_optiontype



.. _ak-forms-numpyform-_columns:

.. py:method:: ak.forms.NumpyForm._columns(self, path, output, list_indicator)



.. _ak-forms-numpyform-_select_columns:

.. py:method:: ak.forms.NumpyForm._select_columns(self, index, specifier, matches, output)



.. _ak-forms-numpyform-_column_types:

.. py:method:: ak.forms.NumpyForm._column_types(self)

