doc/2.4/_sources/reference/generated/ak.forms.NumpyForm.rst.txt
ak.forms.NumpyForm
------------------

.. py:module: ak.forms.NumpyForm

Defined in `awkward.forms.numpyform <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/numpyform.py>`__ on `line 62 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/numpyform.py#L62>`__.

.. py:class:: ak.forms.NumpyForm(self, primitive, inner_shape=(), *, parameters=None, form_key=None)



.. _ak-forms-numpyform-is_numpy:

.. py:attribute:: ak.forms.NumpyForm.is_numpy
    :value: True



.. _ak-forms-numpyform-primitive:

.. py:attribute:: ak.forms.NumpyForm.primitive



.. _ak-forms-numpyform-inner_shape:

.. py:attribute:: ak.forms.NumpyForm.inner_shape



.. _ak-forms-numpyform-copy:

.. py:method:: ak.forms.NumpyForm.copy(self, primitive=UNSET, inner_shape=UNSET, *, parameters=UNSET, form_key=UNSET)



.. _ak-forms-numpyform-simplified:

.. py:method:: ak.forms.NumpyForm.simplified(cls, primitive, inner_shape=(), *, parameters=None, form_key=None)



.. _ak-forms-numpyform-itemsize:

.. py:attribute:: ak.forms.NumpyForm.itemsize



.. _ak-forms-numpyform-__repr__:

.. py:method:: ak.forms.NumpyForm.__repr__(self)



.. _ak-forms-numpyform-_to_dict_part:

.. py:method:: ak.forms.NumpyForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-numpyform-type:

.. py:attribute:: ak.forms.NumpyForm.type



.. _ak-forms-numpyform-__eq__:

.. py:method:: ak.forms.NumpyForm.__eq__(self, other)



.. _ak-forms-numpyform-to_regularform:

.. py:method:: ak.forms.NumpyForm.to_RegularForm(self)



.. _ak-forms-numpyform-purelist_parameters:

.. py:method:: ak.forms.NumpyForm.purelist_parameters(self, *keys)



.. _ak-forms-numpyform-purelist_isregular:

.. py:attribute:: ak.forms.NumpyForm.purelist_isregular



.. _ak-forms-numpyform-purelist_depth:

.. py:attribute:: ak.forms.NumpyForm.purelist_depth



.. _ak-forms-numpyform-is_identity_like:

.. py:attribute:: ak.forms.NumpyForm.is_identity_like



.. _ak-forms-numpyform-minmax_depth:

.. py:attribute:: ak.forms.NumpyForm.minmax_depth



.. _ak-forms-numpyform-branch_depth:

.. py:attribute:: ak.forms.NumpyForm.branch_depth



.. _ak-forms-numpyform-fields:

.. py:attribute:: ak.forms.NumpyForm.fields



.. _ak-forms-numpyform-is_tuple:

.. py:attribute:: ak.forms.NumpyForm.is_tuple



.. _ak-forms-numpyform-dimension_optiontype:

.. py:attribute:: ak.forms.NumpyForm.dimension_optiontype



.. _ak-forms-numpyform-_columns:

.. py:method:: ak.forms.NumpyForm._columns(self, path, output, list_indicator)



.. _ak-forms-numpyform-_select_columns:

.. py:method:: ak.forms.NumpyForm._select_columns(self, match_specifier)



.. _ak-forms-numpyform-_prune_columns:

.. py:method:: ak.forms.NumpyForm._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-numpyform-_column_types:

.. py:method:: ak.forms.NumpyForm._column_types(self)



.. _ak-forms-numpyform-__setstate__:

.. py:method:: ak.forms.NumpyForm.__setstate__(self, state)



.. _ak-forms-numpyform-_expected_from_buffers:

.. py:method:: ak.forms.NumpyForm._expected_from_buffers(self, getkey, recursive)

